--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 </div>   
             </div>       
         </div>
-        <div class = "bottomBox">Instagram: _____ Order here        Phone: _____</div>
+        <div class = "bottomBox">
+            <div>
+                <a class="navigator" href="https://instagram.com" target="_blank">Instagram</a>
+                <a class = "navigator" href = "order.html">Order Here</a>
+                <p class=  "navigator">(xxx)-xxx-xxxx</p>
+            </div>
+        </div>
     </body>
 </html>
