--- a/page.html
+++ b/page.html
@@ -1,5 +1,6 @@
 <div class = "menuInfo">
     <h2 id = "menucontentheader"></h2>
     <div id = "menucontent"></div>
+    <img id="menuImage" src = "resources/logo.jpeg" width = "auto" height = "200">
     <button class="button" id="backButton">Back</button>
 </div>
