added basic ordering frontend functionality

--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
             </div>       
         </div>
         <div class = "bottomBox">
-            <div>
-                <a class="navigator" href="https://instagram.com" target="_blank">Instagram</a>
-                <a class = "navigator" href = "order.html">Order Here</a>
-                <p class=  "navigator">(xxx)-xxx-xxxx</p>
-            </div>
+            <a class="navigator" href="https://instagram.com" target="_blank">Instagram</a>
+            <p id = "cartIndicator"class = "cart navigator">View Order[0]</p>
+            <p class = "navigator">(xxx)-xxx-xxxx</p>
         </div>
     </body>
 </html>
