--- a/page.html
+++ b/page.html
@@ -2,5 +2,9 @@
     <h2 id = "menucontentheader"></h2>
     <div id = "menucontent"></div>
     <img id="menuImage" src = "resources/logo.jpeg" width = "auto" height = "200">
-    <button class="button" id="backButton">Back</button>
+    <div class = "pageButtonGrouper">
+        <button class = "button" id = "orderButton">Add to order</button>
+        <button class = "button" id = "orderRemoveButton">Remove From order</button>
+        <button class="button" id="backButton">Back</button>
+    </div>
 </div>
