almost done order template frontent. Need to reformat order info section

--- a/order.html
+++ b/order.html
@@ -1,5 +1,15 @@
-<div class = "orderInfo">
-    <h2 id = "orderContentHeader">Order Info</h2>
-    <div id = "orderContent"></div>
+<div class="orderInfo">
+    <h2 id="orderContentHeader">Order Info</h2>
+    <div id="orderContent"></div>
+
+    <!-- Template for each order item -->
+    <template id="orderItemTemplate">
+        <div class="orderItem">
+            <h3 class="orderItemHeader"></h3>
+            <img class="orderItemImage" src="" alt="Food Image" width="100" height="100">
+            <p class="orderItemDescription"></p>
+        </div>
+    </template>
+
     <button class="button" id="backButton">Back</button>
 </div>
