finished raw frontend

--- a/order.html
+++ b/order.html
@@ -6,8 +6,10 @@
     <template id="orderItemTemplate">
         <div class="orderItem">
             <h3 class="orderItemHeader"></h3>
-            <img class="orderItemImage" src="" alt="Food Image" width="100" height="100">
-            <p class="orderItemDescription"></p>
+            <div class="orderItemButtons pageButtonGrouper">
+                <button class="button addBtn">+</button>
+                <button class="button removeBtn">-</button>
+            </div>
         </div>
     </template>
 
